--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,10 +4,15 @@ live_config_reload = true
 
 [window]
 padding = {x = 20, y = 10}
-decorations = "None"
+decorations = "Buttonless"
 opacity = 0.9
 blur = true
 startup_mode = "Maximized"
+
+[mouse]
+hide_when_typing = true
+
+
 
 [font]
 normal = {family = "Iosevka Nerd Font", style = "Regular"}
