--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,6 +8,7 @@ decorations = "Buttonless"
 opacity = 0.9
 blur = true
 startup_mode = "Maximized"
+option_as_alt = "Both"
 
 [mouse]
 hide_when_typing = true
