--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -100,4 +100,7 @@ index = 17
 color = "#d67ad2"
 
 [keyboard]
-bindings = [{ key = "Enter", mods = "Alt", action = "ReceiveChar" }]
+bindings = [{ key = "Enter", mods = "Alt", action = "ReceiveChar" }, 
+{ key = "Enter", mods = "Option", action = "ReceiveChar" }]
+
+
